# tiny-torch

./: CMakeLists.txt
include/tinytorch/: activations.hpp  data.hpp  layers.hpp  losses.hpp  tensor.hpp
tests/: test_activations.cpp  test_autograd.cpp  test_data.cpp  test_layers.cpp  test_losses.cpp  test_tensor.cpp
